240325 창휘 feat: 단어 개수 반환 기능 추가